--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <h2 class="sr-only">Cards</h2>
 
     <a href="#" class="card">
-      <img src="images/card-lead-climbing.jpg" height="500" width="500" alt="An exapmple of Lead Climbing"
+      <img src="images/card-lead-climbing.jpg" height="500" width="500" alt="An example of Lead Climbing"
         loading="lazy">
       <p>Lead Climbing</p>
     </a>
